fixing the close notification button .close-button to make it hoverable and when clicked active to 100% visible

--- a/.config/ags/style/mixins/button.sass
+++ b/.config/ags/style/mixins/button.sass
@@ -17,9 +17,9 @@
     box-shadow: inset 0 0 0 $border-width $foreground
   
   &:disabled 
+    color: transparentize($foreground, 0.7)
     background-color: transparent
     box-shadow: none
-    color: transparentize($foreground, 0.7)
 
   // TODO: check on quicksettins, $reactive var if necesary 
   @if $reactive
@@ -29,9 +29,9 @@
 
     // TODO: check on quicksettins, if checked or active property needed
     &:active
-    &:checked
-        background-color: red
-        color: red
+      // &:checked
+      background-color: $primary
+      box-shadow: inset 0 0 0 $border-width $foreground
 
     // TODO: check on quicksettins, what this property does on active or checked buttons
     // &:hover
