--- a/.config/ags/style/mixins/scrollable.sass
+++ b/.config/ags/style/mixins/scrollable.sass
@@ -36,6 +36,6 @@
         slider
           background-color: rgba($foreground, .7)
           min-width: .6em
-          margin: .6em $spacing/5
+          margin: .6em calc($spacing/5)
       
     
